# dest

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  lint.yml  release.yml
billing/: Cargo.toml
billing/src/: account.rs  aggregator.rs  calculator.rs  engine.rs  freeze.rs  lib.rs  rates.rs  subscription.rs  types.rs
cli/: Cargo.toml  vaultkeeperd.service
cli/src/: api.rs  commands.rs  config.rs  main.rs
core/: Cargo.toml
core/src/: bip39_recovery.rs  chunking.rs  crypto.rs  encryption.rs  erasure.rs  lib.rs  merkle.rs  padding.rs  seed.rs  types.rs
docs/: ARCHITECTURE.md  BILLING.md  DEPLOY.md  LEGAL.md  SECURITY.md  SELF_VERIFICATION.md  USER_GUIDE.md
ledger/: Cargo.toml
ledger/src/: conflict.rs  escrow.rs  gossip_sync.rs  lib.rs  reputation.rs  schema.rs  store.rs
legal/: 54fz_compliance.md  54fz_receipt_template.json  agent_contract_host_ru.md  agent_report_template.json  host_agreement_ru.md  offer_client_ru.md  offer_ru.md  privacy_ru.md
p2p/: Cargo.toml
p2p/src/: behaviour.rs  challenge.rs  config.rs  discovery.rs  gossip.rs  heartbeat.rs  lib.rs  message.rs  node.rs  transport.rs
scripts/: audit_check.sh  build_and_verify.sh  cross_compile_targets.sh  generate_docs.sh  verify_integration.sh
storage/: Cargo.toml
storage/src/: disk.rs  lib.rs  replication.rs  sandbox.rs  shard_store.rs
tauri/src/: app.js  index.html  styles.css
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: lib.rs  main.rs
tests/integration/: billing_integration.rs  ledger_integration.rs
tests/property/: erasure_property.rs
tests/unit/: core_tests.rs
