[workspace]
resolver = "2"
members = [
    "core",
    "p2p",
    "billing",
    "storage",
    "ledger",
    "cli",
]
exclude = [
    "tauri/src-tauri",
    "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["VaultKeeper Team"]
license = "AGPL-3.0-or-later"
rust-version = "1.75"
repository = "https://github.com/haosirut/vaultkeeper-p2p"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Crypto
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
hmac = "0.12"
blake3 = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
rmp-serde = "1"
bytes = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# P2P
libp2p = { version = "0.53", features = ["full"] }

# Erasure coding
reed-solomon-erasure = "6"

# BIP39
bip39 = { version = "2", features = ["rand"] }

# Decimal math
rust_decimal = { version = "1.40", features = ["serde"] }
rust_decimal_macros = "1.40"

# CLI
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Misc
hex = "0.4"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["derive"] }
parking_lot = "0.12"
dashmap = "5"
