[package]
name = "vaultkeeper-billing"
version.workspace = true
edition.workspace = true
description = "Hourly billing calculations, 90/10 revenue split, freeze/export timers, Decimal math"

[dependencies]
vaultkeeper-core = { path = "../core" }
uuid.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
