[package]
name = "vaultkeeper-billing"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Billing: hourly Decimal math, 90/10 split, freeze/export, subscriptions"

[dependencies]
vaultkeeper-core = { path = "../core" }
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
