[package]
name = "vaultkeeper-cli"
version.workspace = true
edition.workspace = true
description = "Headless CLI daemon for VaultKeeper P2P storage node"

[[bin]]
name = "vaultkeeperd"
path = "src/main.rs"

[dependencies]
vaultkeeper-core = { path = "../core" }
vaultkeeper-p2p = { path = "../p2p" }
vaultkeeper-billing = { path = "../billing" }
vaultkeeper-storage = { path = "../storage" }
vaultkeeper-ledger = { path = "../ledger" }
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
hex.workspace = true
blake3.workspace = true
rust_decimal.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
