[package]
name = "vaultkeeper-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Headless CLI daemon for VaultKeeper P2P node"

[[bin]]
name = "vaultkeeperd"
path = "src/main.rs"

[dependencies]
vaultkeeper-core = { path = "../core" }
vaultkeeper-p2p = { path = "../p2p" }
vaultkeeper-billing = { path = "../billing" }
vaultkeeper-storage = { path = "../storage" }
vaultkeeper-ledger = { path = "../ledger" }
libp2p.workspace = true
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
hex.workspace = true
blake3.workspace = true
rust_decimal.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
