[package]
name = "vaultkeeper-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cryptographic primitives: XChaCha20-Poly1305, Argon2id, BIP39, Reed-Solomon, Merkle"

[dependencies]
chacha20poly1305.workspace = true
argon2.workspace = true
bip39.workspace = true
zeroize.workspace = true
ring.workspace = true
sha2.workspace = true
blake3.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
reed-solomon-erasure.workspace = true
hex.workspace = true

[dev-dependencies]
tokio.workspace = true
tempfile.workspace = true
