[package]
name = "vaultkeeper-ledger"
version.workspace = true
edition.workspace = true
description = "Ledger: SQLite schema, gossip-sync protocol, Merkle root generation, conflict resolution"

[dependencies]
vaultkeeper-core = { path = "../core" }
rusqlite.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
hex.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3"
