[package]
name = "vaultkeeper-ledger"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ledger: SQLite, gossip-sync, Merkle roots, reputation, escrow"

[dependencies]
vaultkeeper-core = { path = "../core" }
vaultkeeper-billing = { path = "../billing" }
rusqlite.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
hex.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile.workspace = true
