[package]
name = "vaultkeeper-p2p"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "P2P networking: libp2p v0.54 with NAT traversal (relay, autonat, dcutr)"

[dependencies]
vaultkeeper-core = { path = "../core" }
libp2p = { workspace = true, features = ["tokio"] }
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
sha2.workspace = true
blake3.workspace = true
chrono.workspace = true
hex.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
uuid.workspace = true
rust_decimal.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
