[package]
name = "vaultkeeper-storage"
version.workspace = true
edition.workspace = true
description = "Storage management: seccomp/cgroups sandboxing, disk I/O, replication logic"

[dependencies]
vaultkeeper-core = { path = "../core" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
sha2.workspace = true
blake3.workspace = true
chrono.workspace = true
parking_lot.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
bytes.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3"
