[package]
name = "vaultkeeper-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Storage: seccomp/cgroups sandbox, shard store, replication, mobile guards"

[dependencies]
vaultkeeper-core = { path = "../core" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
blake3.workspace = true
chrono.workspace = true
parking_lot.workspace = true
uuid.workspace = true
bytes.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile.workspace = true
