[package]
name = "vaultkeeper-app"
version = "0.1.0"
edition = "2021"
description = "VaultKeeper Tauri v2 Desktop App"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vaultkeeper-core = { path = "../../core" }
vaultkeeper-billing = { path = "../../billing" }
